# MyGraduationProject

./: LICENSE  README.md  Reader介绍.md  学习记录.md  用于建模参数化和约束的新 ISO 10303 (STEP) 资源.html  论文pp(1).docx
StepReader/: CMakeLists.txt  main.cpp
StepReader/DrawFile/: Draw.cpp
StepReader/DrawObj/: DrawUtil.cpp  DrawUtil.h
StepReader/ReadFile/: FileReader.cpp  FileReader.h  StepFile.cpp  StepFile.h
StepReader/StepClass/: SuperEntity.cpp  SuperEntity.h
StepReader/StepClass/GeomEntity/: Curve.cpp  Curve.h  ManifoldSolidBrep.cpp  ManifoldSolidBrep.h  MiddleGeom.cpp  MiddleGeom.h  Point.cpp  Point.h  Surface.cpp  Surface.h
StepReader/StepClass/TopoEntity/: ClosedShell.cpp  ClosedShell.h  Edge.cpp  Edge.h  Face.cpp  Face.h  GeomPointer.cpp  GeomPointer.h  Loop.cpp  Loop.h  Vertex.cpp  Vertex.h
StepReader/Util/: Util.cpp  Util.h
StepReader/src/: battery-sfa.html  battery-sfa.xlsx  battery.STEP  car-sfa.html  car-sfa.xlsx  chair-sfa.html  chair-sfa.xlsx  chair.step  coupler.step  elevator-sfa.xlsx  gun-sfa.xlsx  man-sfa.html  man-sfa.xlsx  man.STEP
StepReader1/: CMakeLists.txt  StepReader.sln
StepReader1/StepReader/: StepReader.vcxproj  main.cpp
StepReader1/StepReader/Debug/: StepReader.exe.recipe  StepReader.ilk  vc142.idb
StepReader1/StepReader/Debug/StepReader.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  StepReader.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
step文件夹/: cube.STEP  零件1.STEP
